Home page link update - Converted featured members/committees/impact teams buttons to drop-down. menus. - Adjusted h3 alignment on mobile home page. - Adjusted button margins. - Clicking the home page featured member slideshow no longer links you to a secondary page.

--- a/resources/assets/sass/page/_home.scss
+++ b/resources/assets/sass/page/_home.scss
@@ -164,3 +164,46 @@
 ul.week {
   height:50%;
 }
+
+.dropdown {
+  display: inline-block;
+  margin-top: 0px;
+
+  &:hover {
+
+    .dropdown-content {
+      display: block;
+      margin-top: 0px;
+    }
+  }
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+
+  a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+    &:hover {
+      background-color: #f1f1f1
+      }
+    }
+  }
+
+
+
+
+/*.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  margin-top: 0px;
+} */
