--- a/resources/assets/sass/page/_member.scss
+++ b/resources/assets/sass/page/_member.scss
@@ -3,7 +3,7 @@
   display: flex;
 
  div {
-     margin: 5px;
+     margin-top: 5px;
      text-align: center;
      flex: 1;
      background-color: $lightest-blue;
