--- a/resources/assets/sass/page/_mobile.scss
+++ b/resources/assets/sass/page/_mobile.scss
@@ -77,7 +77,7 @@
 
       h3 {
         margin: 20px;
-        padding-left: 20%;
+        padding-left: 15%;
       }
 
       .links {
@@ -92,7 +92,7 @@
 
         div {
           transform: none;
-          margin: 10%;
+          margin: 20% 10% 15% 10%;
         }
 
       }
